done analytic need test